# tcr-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
tcr_assistant/: add_behavior_step.py  app.py  change_code_iterator.py  create_behavior_step.py  create_code_iterator.py  feedback_loop.py  main.py  refactor_step.py  signature.py  source_code.py
tcr_assistant/code_generator/: code_generator.py  context.py  context_element.py  dspy_code_generator.py  python_context.py  signature.py
tcr_assistant/code_generator/context_elements/: create_new_test_file.py  failed_attempt.py  tests.py
tcr_assistant/feedback/: feedback.py  feedback_chain.py  manual_feedback.py  test_feedback.py
tcr_assistant/version_control/: git_version_control.py  version_control.py
test_code/: fibo.py  test_fibonacci.py
xp_assistant/: add_behavior_step.py  app.py  change_code_iterator.py  create_behavior_step.py  create_code_iterator.py  gemini.py  llm_client.py  main.py  openai_client.py  openai_conversation.py  refactor_step.py  signature.py  source_code.py
xp_assistant/feedback/: feedback.py  feedback_chain.py  manual_feedback.py  print_feedback.py  test_feedback.py
xp_assistant/version_control/: commit.py  git_version_control.py  revert.py  version_control.py
xp_assistent/: app.py  gemini.py  llm_client.py  llm_conversation.py  openai_client.py  openai_conversation.py  signature.py
